Fixed word wrap comment problem.

--- a/Client/css/app.styl
+++ b/Client/css/app.styl
@@ -65,3 +65,5 @@ footer
 img
   margin-right 5px
 
+.comment-text
+  word-wrap: break-word
